# MMA-model2

./: .c-template  .gitignore  .h-template  CMakeLists.txt  README.md  interactive_dashboard.py  sdkconfig.defaults
components/accel/: CMakeLists.txt  accel.c  accel.h
components/accelGY/: CMakeLists.txt  accelGY.c  accelGY.h
components/adc_drv/: CMakeLists.txt  adc_drv.c  adc_drv.h
components/ble_com/: CMakeLists.txt  common.h  gap.c  gap.h  gatt_svc.c  gatt_svc.h
components/bme/: CMakeLists.txt  bme.c  bme.h
components/bme68x/: CMakeLists.txt  bme68x.c  bme68x.h  bme68x_defs.h
components/data_queues/: CMakeLists.txt  data_queues.c  data_queues.h
components/gps/: CMakeLists.txt  Kconfig.projbuild  gps.c  gps.h
components/i2c/: CMakeLists.txt  i2c.c  i2c.h
components/led_rgb/: CMakeLists.txt  led_rgb.c  led_rgb.h
components/led_strip_encoder/: CMakeLists.txt  led_strip_encoder.c  led_strip_encoder.h
components/microphone/: CMakeLists.txt  microphone.c  microphone.h
components/pwm/: CMakeLists.txt  pwm.c  pwm.h
components/sdspi/: CMakeLists.txt  sdspi.c  sdspi.h
components/sweat_sensor/: CMakeLists.txt  sweat_sensor.c  sweat_sensor.h
data/: WO663.TXT  WO720.TXT
main/: CMakeLists.txt  bme_task.c  bme_task.h  main.c
main/inc/: accelGY_task.h  accel_task.h  ble_task.h  gps_task.h  mic_task.h  sdcard_task.h  sweat_task.h
main/src/: accelGY_task.c  accel_task.c  ble_task.c  bme_task.c  gps_task.c  mic_task.c  sdcard_task.c  sweat_task.c
